move to Just the Docs theme

--- a/pages/404.md
+++ b/pages/404.md
@@ -2,6 +2,8 @@
 title: 404
 layout: post
 permalink: /404.html
+nav_exclude: true
+search_exclude: true
 ---
 
 <ruby>迷子<rt>まいご</rt></ruby>になったよ
@@ -9,7 +11,3 @@ permalink: /404.html
 オーマイゴッド
 
 :o
-
-Let's get you home :)<br>
-\|<br>
-v
