port over clocks part 1

--- a/content/clocks.mdx
+++ b/content/clocks.mdx
@@ -1,45 +1,43 @@
----
-title: Clocks
-layout: post
----
+import { Timer, DTimer, RTimer, RdTimer, ZTimer, JTimer, ETimer, ReTimer, PTimer } from '@/js/clocks'
 
-{: .fs-6}
-A collection of interesting time formats, see if you can figure out how each works :))
+### A collection of interesting time formats, see if you can figure out how each works :))
 
 ### 24-hour time
 
-* <span id="timer"></span>
+* <Timer />
 
 ### A
 
-* <span id="dtimer"></span>
+* <DTimer />
 
 ### B
 
-* <span id="rtimer"></span>
+* <RTimer />
 
 ### C
 
-* <span id="rdtimer"></span>
+* <RdTimer />
 
 ### D
 
-* <span id="ztimer" style="font-size:xx-large"></span>
+* <ZTimer />
 
 ### E
 
-* <span id="jtimer"></span>
+* <JTimer />
 
 ### F
 
-* <span id="etimer"></span>
-* <span id="retimer"></span>
+* <ETimer />
+
+* <ReTimer />
 
 ### G
 
-* <span id="ptimer"></span>
+* <PTimer />
 
-<!-- ### H
+
+{/*<-- ### H
 
 * <span style="font-size:xx-large">🕐</span> -->
 
@@ -65,3 +63,4 @@ A collection of interesting time formats, see if you can figure out how each wor
 <script type="text/javascript" src="../js/clocks.js"></script>
 
 <script type="text/javascript">startTime(); hide('timeForm');</script>
+*/}
