--- a/content/moment.mdx
+++ b/content/moment.mdx
@@ -1,5 +1,5 @@
 ### How long is a moment today in London?
 
-import { moment } from "../js/moment.js"
+import { moment } from "@/js/moment"
 
 A moment is { moment() } seconds long today.
