--- a/content/pinyin.mdx
+++ b/content/pinyin.mdx
@@ -1,9 +1,4 @@
----
-title: Pinyin Chart
-layout: post
----
-
-interjections removed, zi/zhi merged with bi/di
+### interjections removed, zi/zhi merged with bi/di
 
 |   |   a|   e|   ai|   ei|   ao|   ou|   an|   en|   ang|   eng|   ong|   i|  ia|  ie|  iao|  iu|  ian|  in|  iang|  ing|  iong|   u|   ua|   uo|   uai|   ui|   uan|   un|   uang| ueng|  ü|  üe|  üan|  ün|
 |---|----|----|-----|-----|-----|-----|-----|-----|------|------|------|----|----|----|-----|----|-----|----|------|-----|------|----|-----|-----|------|-----|------|-----|-------|-----|---|----|-----|----|
