--- a/content/nas/nas0.mdx
+++ b/content/nas/nas0.mdx
@@ -1,15 +1,8 @@
----
-title: 0 - Building a Server
-layout: post
----
+import { Callout } from 'nextra/components';
 
-{: .fs-6}
-Building a Server
+# Building a Server
 
-1. TOC
-{:toc}
-
-# Build the computer
+## Build the computer
 
 The target of this build is the Synology DS1522+ 5 bay desktop NAS which costs about £700.
 This will have a better CPU and one more bay for 60% of the cost.
@@ -26,22 +19,24 @@ This will have a better CPU and one more bay for 60% of the cost.
 | SSD   | Crucial 250G                 |    26.99 |
 | Total |                              |   416.64 |
 
-{: .highlight}
-> Built the whole thing in one go, but it didn't POST the first time.
-> To troubleshoot I pulled out everything from the motherboard except the CPU, RAM,
-> power cables for CPU and MOBO, and HDMI cable.
-> then it POST'ed successfully, so I tested repeatedly adding one connection
-> at a time, and it POST'ed every time.
->
-> No idea what the problem was.
+<Callout type='info'>
+Built the whole thing in one go, but it didn't POST the first time.
+To troubleshoot I pulled out everything from the motherboard except the CPU, RAM,
+power cables for CPU and MOBO, and HDMI cable.
+then it POST'ed successfully, so I tested repeatedly adding one connection
+at a time, and it POST'ed every time.
+
+No idea what the problem was.
+</Callout>
 
 
-# Setting up SSH
+## Setting up SSH
 
-{: .highlight}
-> eventually I'd like to do everything remotely, so SSH should be a good first step.
-> It should allow connections from the local network only for now, not really planning
-> to access this from the outside world any time soon.
+<Callout type='info'>
+eventually I'd like to do everything remotely, so SSH should be a good first step.
+It should allow connections from the local network only for now, not really planning
+to access this from the outside world any time soon.
+</Callout>
 
 download openssh-server and configure it:
 
@@ -71,9 +66,10 @@ then to set up ssh key on client side:
 ssh-copy-id -i ~/.ssh/<name>.pub -p 22 user@ipaddress
 ```
 
-{: .highlight}
-> ssh keys might be overkill on top of matching 192.168,
-> but I guess more security doesn't hurt.
+<Callout type='info'>
+ssh keys might be overkill on top of matching 192.168,
+but I guess more security doesn't hurt.
+</Callout>
 
 to SSH into server, either configure router DHCP so that the nas gets a fixed IP:
 
@@ -86,27 +82,31 @@ or if DNS works in the local network:
 ssh user@hostname
 ```
 
-{: .todo}
-> this works on some of my local computers but not all?
+<Callout type='warning'>
+this works on some of my local computers but not all?
+</Callout>
 
-{: .todo}
-> motherboard supports wake-on-lan, might want to try it out
+<Callout type='warning'>
+motherboard supports wake-on-lan, might want to try it out
+</Callout>
 
 
-# Setting up remote desktop
+## Setting up remote desktop
 
-{: .highlight}
-> Remote CLI works, now for remote GUI.
->
-> NoMachine seems to have a lot more features but it feels like its meant to be
-> configured and used through its GUI.
-> Setting up VNC from SSH CLI would be cool but I still have my KB&M & monitor connected
-> so might as well make use of them.
+<Callout type='info'>
+Remote CLI works, now for remote GUI.
+
+NoMachine seems to have a lot more features but it feels like its meant to be
+configured and used through its GUI.
+Setting up VNC from SSH CLI would be cool but I still have my KB&M & monitor connected
+so might as well make use of them.
+</Callout>
 
 Download and install NoMachine on both server and client.
 
-{: .todo}
-> Nomachine provides a `.deb` file on its website, is there an easy way to check updates for it?
+<Callout type='warning'>
+Nomachine provides a `.deb` file on its website, is there an easy way to check updates for it?
+</Callout>
 
 Initially this just shows a blackscreen because Ubuntu is too smart:
 
@@ -126,10 +126,11 @@ sudo /etc/NX/nxserver --shutdown
 ```
 
 
-# Enable firewall
+## Enable firewall
 
-{: .note}
-> You might want to do this earlier.
+<Callout>
+You might want to do this earlier.
+</Callout>
 
 UFW is preinstalled, so we'll just use that:
 
@@ -153,14 +154,16 @@ refer to this for more details on UFW logs:
 
 [How Do I Check My UFW Log?](https://linuxhint.com/check-my-ufw-log/)
 
-{: .todo}
-> NoMachine is supposed to configure firewall automatically but that didn't work?
+<Callout type='warning'>
+NoMachine is supposed to configure firewall automatically but that didn't work?
+</Callout>
 
 
-# Setting up a Terraria server
+## Setting up a Terraria server
 
-{: .highlight}
-> This doesn't really help with the NAS thing but it's fun.
+<Callout type='info'>
+This doesn't really help with the NAS thing but it's fun.
+</Callout>
 
 Upload the world save file with rsync:
 
@@ -182,9 +185,10 @@ language=en-US
 npcstream=60
 ```
 
-{: .note}
-> Setting maximum player to be exact seems to block players retrying connection after
-> entering a wrong password
+<Callout>
+Setting maximum player to be exact seems to block players retrying connection after
+entering a wrong password
+</Callout>
 
 make sure the configuration file and the binary is in the same folder, and run:
 
@@ -214,6 +218,7 @@ and to reattach after the detach:
 screen -r [session]
 ```
 
-{: .note}
-> tmux should work as well.
+<Callout>
+tmux should work as well.
+</Callout>
 
