--- a/content/mapgen.mdx
+++ b/content/mapgen.mdx
@@ -1,12 +1,5 @@
-import { DrawGraph } from '@/js/mapgen'
+import { RefreshGraph } from '@/js/mapgen'
 
 # Random Map Pathfinding
 
-<DrawGraph />
-
-
-{/*<button id="calc" onclick="main()">Generate</button>
-
-<svg id="map" viewBox="0 0 1 1"></svg>
-
-<script type="text/javascript" src="../js/mapgen.js"></script>*/}
+<RefreshGraph />
