--- a/content/dakuten.mdx
+++ b/content/dakuten.mdx
@@ -1,7 +1,10 @@
 import { DakutenBox } from '@/js/dakuten';
+import { Button } from 'nextra/components';
 
 ### A tool that irresponsibly adds dakutens everywhere.
 
 ### 濁点を無理やりつけるツール！
 
 <DakutenBox />
+
+<Button>Hello</Button>
