clock time travel

--- a/content/playground/clocks.mdx
+++ b/content/playground/clocks.mdx
@@ -1,6 +1,8 @@
-import { Timer, DTimer, RTimer, RdTimer, ZTimer, JTimer, ETimer, ReTimer, PTimer } from '@/js/clocks'
+import { Timer, DTimer, RTimer, RdTimer, ZTimer, JTimer, ETimer, ReTimer, PTimer, TimeTravelControls } from '@/js/clocks'
 
 ### A collection of interesting time formats, see if you can figure out how each works :))
+
+<TimeTravelControls>
 
 ### 24-hour time
 
@@ -36,31 +38,4 @@ import { Timer, DTimer, RTimer, RdTimer, ZTimer, JTimer, ETimer, ReTimer, PTimer
 
 * <PTimer />
 
-
-{/*<-- ### H
-
-* <span style="font-size:xx-large">🕐</span> -->
-
-<br>
-
-<input id="timeTravel" type="checkbox" onchange="startTime();"> Enable time travel
-
-<div id="timeForm" display="none">
-<strong>Select current time:</strong>
-
-<form>
-    <input id="h" type="number" style="width: 5ch;" min="0" max="23" value="12" onchange="startTime()"> :
-    <input id="m" type="number" style="width: 5ch;" min="0" max="59" value="34" onchange="startTime()"> :
-    <input id="s" type="number" style="width: 5ch;" min="0" max="59" value="56" onchange="startTime()">
-</form>
-<br>
-</div>
-
-<!-- <input type="checkbox"> Enable hints -->
-
-<script type="text/javascript" src="../js/suncalc/suncalc.js"></script>
-
-<script type="text/javascript" src="../js/clocks.js"></script>
-
-<script type="text/javascript">startTime(); hide('timeForm');</script>
-*/}
+</TimeTravelControls>
