more styling improvements

--- a/content/playground/clocks.mdx
+++ b/content/playground/clocks.mdx
@@ -1,10 +1,12 @@
 import { Timer, DTimer, RTimer, RdTimer, ZTimer, JTimer, ETimer, ReTimer, PTimer, TimeTravelControls } from '@/js/clocks'
 
-### A collection of interesting time formats, see if you can figure out how each works :))
+# Clocks
+
+## A collection of interesting time formats, see if you can figure out how each works :))
 
 <TimeTravelControls>
 
-### 24-hour time
+### Reference 24-hour time
 
 * <Timer />
 
