--- a/content/playground/dakuten.mdx
+++ b/content/playground/dakuten.mdx
@@ -1,8 +1,10 @@
 import { DakutenBox } from '@/js/dakuten';
 
-### A tool that irresponsibly adds dakutens everywhere.
+# Dakuten
 
-### 濁点を無理やりつけるツール！
+## A tool that irresponsibly adds dakutens everywhere.
+
+## 濁点を無理やりつけるツール！
 
 <DakutenBox />
 
