--- a/content/playground/physics.mdx
+++ b/content/playground/physics.mdx
@@ -1,10 +1,6 @@
----
-title: Physics Engine
-layout: post
----
 import PhysicsCanvas from '@/js/physics'
 
-### Ball Bouncing Physics Simulator
+# Ball Bouncing Physics Simulator
 
 Play with arrowkeys. Arrow key scrolling should be disabled.
 
