--- a/content/playground/hex2.mdx
+++ b/content/playground/hex2.mdx
@@ -2,4 +2,6 @@ import { HexGridPathfinding } from "@/js/hex2";
 
 # Hexagonal Grid Pathfinding
 
+## Pathfinding on a SVG-based Hexagonal Grid
+
 <HexGridPathfinding />
