--- a/content/playground/marketsim.mdx
+++ b/content/playground/marketsim.mdx
@@ -1,5 +1,7 @@
-import { MarketSim } from '@/js/marketsim'
+import { MarketSim, NetworthDisplay } from '@/js/marketsim'
 
 # Stock Market Simulator
+
+## Networth: £<NetworthDisplay />
 
 <MarketSim />
