--- a/content/playground/aruaru.mdx
+++ b/content/playground/aruaru.mdx
@@ -1,4 +1,4 @@
-import { Question } from '@/js/aruaru'
+import { Question } from '@/ts/aruaru'
 import { Callout } from 'nextra/components'
 
 # Guess what the two categories are, and find a word that fits in both!
