--- a/content/playground/clocks.mdx
+++ b/content/playground/clocks.mdx
@@ -1,4 +1,4 @@
-import { Timer, DTimer, RTimer, RdTimer, ZTimer, JTimer, ETimer, ReTimer, PTimer, TimeTravelControls } from '@/js/clocks'
+import { Timer, DTimer, RTimer, RdTimer, ZTimer, JTimer, ETimer, ReTimer, PTimer, TimeTravelControls } from '@/ts/clocks'
 
 # Clocks
 
