--- a/content/playground/ecalc.mdx
+++ b/content/playground/ecalc.mdx
@@ -1,4 +1,4 @@
-import { ECalc } from '@/js/ecalc'
+import { ECalc } from '@/ts/ecalc'
 
 # Estimates <i>e</i> by Simulating People Sitting on a Long Bench
 
