--- a/content/playground/marketsim.mdx
+++ b/content/playground/marketsim.mdx
@@ -1,4 +1,4 @@
-import { MarketSim, MarketNumber } from '@/js/marketsim'
+import { MarketSim, MarketNumber } from '@/ts/marketsim'
 
 {/*/ export type MarketNumbers = {
 //     price: number;
