--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,5 +1,9 @@
+export const lastUpdated = '01 Jan 0001'
+
 # Welcome!
 
 ## You've found the best website on the internet!
 
 (According to me at least)
+
+<TimeStamp date={lastUpdated} />
