--- a/content/letsplay/index.mdx
+++ b/content/letsplay/index.mdx
@@ -2,4 +2,8 @@
 asIndexPage: true
 ---
 
+export const lastUpdated = '01 Jan 0001'
+
 ### Let's play some games!
+
+<TimeStamp date={lastUpdated} />
