--- a/content/nas/index.mdx
+++ b/content/nas/index.mdx
@@ -2,6 +2,8 @@
 asIndexPage: true
 ---
 
+export const lastUpdated = '01 Jan 0001'
+
 import { Callout } from 'nextra/components';
 
 ### Log and documentation for my NAS build
@@ -9,3 +11,5 @@ import { Callout } from 'nextra/components';
 <Callout>
 Wow an actual blog post on my _blog_ website?
 </Callout>
+
+<TimeStamp date={lastUpdated} />
