--- a/content/nas/nas0.mdx
+++ b/content/nas/nas0.mdx
@@ -1,3 +1,5 @@
+export const lastUpdated = '01 Jan 0001'
+
 import { Callout } from 'nextra/components';
 
 # Building a Server
@@ -222,3 +224,4 @@ screen -r [session]
 tmux should work as well.
 </Callout>
 
+<TimeStamp date={lastUpdated} />
