--- a/content/nas/nas2.mdx
+++ b/content/nas/nas2.mdx
@@ -1,3 +1,5 @@
+export const lastUpdated = '01 Jan 0001'
+
 import { Callout } from 'nextra/components';
 
 # Improving the NAS
@@ -374,3 +376,5 @@ To enable HDD temperatures in `hwmon`:
 ```bash
 sudo modprobe drivetemp
 ```
+
+<TimeStamp date={lastUpdated} />
