add last update time to letsplay

--- a/content/letsplay/game1/game1_1.mdx
+++ b/content/letsplay/game1/game1_1.mdx
@@ -1,3 +1,11 @@
 import { Callout } from 'nextra/components';
 
-# Hello
+export const lastUpdated = '31 Dec 9999'
+
+
+## Chapter 1
+
+## Chapter 2
+
+
+<TimeStamp date={lastUpdated} />
