--- a/content/letsplay/game2/game2_1.mdx
+++ b/content/letsplay/game2/game2_1.mdx
@@ -1,3 +1,9 @@
 import { Callout } from 'nextra/components';
 
-# Best!
+export const lastUpdated = '31 Dec 9999'
+
+
+## Best Chapter!
+
+
+<TimeStamp date={lastUpdated} />
