--- a/content/letsplay/game2/index.mdx
+++ b/content/letsplay/game2/index.mdx
@@ -2,4 +2,9 @@
 asIndexPage: true
 ---
 
-### Let's play game 2!
+export const lastUpdated = '31 Dec 9999'
+
+
+## Let's play game 2!
+
+<TimeStamp date={lastUpdated} />
