--- a/content/letsplay/index.mdx
+++ b/content/letsplay/index.mdx
@@ -2,8 +2,8 @@
 asIndexPage: true
 ---
 
-export const lastUpdated = '01 Jan 0001'
+export const lastUpdated = '31 Dec 9999'
 
-### Let's play some games!
+## Let's play some games!
 
 <TimeStamp date={lastUpdated} />
