--- a/content/nas/nas3.mdx
+++ b/content/nas/nas3.mdx
@@ -2,7 +2,7 @@ export const lastUpdated = '26 Oct 2025'
 
 import { Callout } from 'nextra/components';
 
-# Optimising the NAS
+# Upgrading the NAS
 
 ## Set up Deluge
 
