--- a/content/letsplay/game1/index.mdx
+++ b/content/letsplay/game1/index.mdx
@@ -2,4 +2,8 @@
 asIndexPage: true
 ---
 
-### Let's play game 1!
+export const lastUpdated = '31 Dec 9999'
+
+## Let's play game 1!
+
+<TimeStamp date={lastUpdated} />
