--- a/content/index.mdx
+++ b/content/index.mdx
@@ -3,6 +3,7 @@ title: Welcome
 theme:
     sidebar: false
     toc: false
+    breadcrumb: false
 ---
 
 export const lastUpdated = '27 Oct 2025'
@@ -12,36 +13,29 @@ export const lastUpdated = '27 Oct 2025'
     style={{ '--hero-image': "url('/blog/images/hero.png')" }}
 >
     <div className="hero-wrapper__content">
-        <h1 style={{ fontSize: 'clamp(2.5rem, 5vw, 4rem)', marginBottom: '1rem' }}>
+        <h1 style={{ fontSize: 'clamp(2.5rem, 5vw, 4rem)', fontWeight:'600', marginBottom: '1rem' }}>
             Welcome!
         </h1>
+        <br/>
         <p style={{ fontSize: '1.1rem', maxWidth: '42rem', margin: '0 auto 2rem' }}>
-            You've found the best website on the internet (according to me, at least).
+            {"You've found the best website on the internet 🦦 (according to me, at least)."}
         </p>
-        <a
-            href="#details"
-            style={{
-                display: 'inline-block',
-                padding: '0.75rem 2.5rem',
-                borderRadius: '999px',
-                background: 'var(--nextra-primary-hue, #2563eb)',
-                color: '#fff',
-                fontWeight: 600,
-                textDecoration: 'none',
-                boxShadow: '0 12px 24px rgba(0,0,0,0.15)',
-            }}
-        >
+        <Button href="letsplay/">
             Jump In
-        </a>
+        </Button>
     </div>
 </div>
 
-<section id="details">
+## Blog pages
 
-## You've found the best website on the internet!
+* 🚧 [Let's Play Game 1](letsplay/game1/)
 
-(According to me at least)
+* 🚧 [Let's Play Game 2](letsplay/game2/)
+
+* [NAS Building Log](nas/)
+
+* [Coding Playground](playground/clocks/)
+
 
 <TimeStamp date={lastUpdated} />
 
-</section>
