--- a/content/playground/moment.mdx
+++ b/content/playground/moment.mdx
@@ -1,5 +1,5 @@
-### How long is a moment today in London?
+# How long is a moment today in London?
 
 import { moment } from "@/ts/moment"
 
-A moment is { moment() } seconds long today.
+### A moment is { moment() } seconds long today.
