add first image test

--- a/content/letsplay/game1/game1_2.mdx
+++ b/content/letsplay/game1/game1_2.mdx
@@ -4,9 +4,10 @@ export const lastUpdated = '31 Dec 9999'
 
 # Test of First Page!
 
-## Start 
+## Start
 
-Let's play the new game! 🐶 
+Let's play the new game! 🐶
 
+![main menu](https://dwpiudeka8xd1.cloudfront.net/elin/20250930194249_1.jpg)
 
 <TimeStamp date={lastUpdated} />
