--- a/content/letsplay/game2/game2_1.mdx
+++ b/content/letsplay/game2/game2_1.mdx
@@ -2,8 +2,8 @@ import { Callout } from 'nextra/components';
 
 export const lastUpdated = '31 Dec 9999'
 
+# Start Game 2!
 
 ## Best Chapter!
-
 
 <TimeStamp date={lastUpdated} />
